# symbaroum

./: .env.sample  .gitignore  README.md  build_lightrag_index.py  pyproject.toml  rag_query.py  rag_symbaroum.py  start.sh  stop.sh  test_docling.py  test_lightrag.py  work-plan.md
api/: app.py  models.py  pipelines.py
benchmarking/: queries.txt  qwen3:14b.txt
static/: index.html
