[project]
name = "symbaroum"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.81.0",
    "flagembedding",
    "llama-index>=0.14.18",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-postprocessor-flag-embedding-reranker>=0.5.0",
    "llama-index-retrievers-bm25>=0.7.1",
    "marker-pdf>=1.10.2",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
flagembedding = { git = "https://github.com/FlagOpen/FlagEmbedding.git" }
